# reduction

./: CMakeLists.txt  README.md
reduction/: CMakeLists.txt  main.cu
